tries to fix issues on ios

--- a/styles/style.css
+++ b/styles/style.css
@@ -626,6 +626,7 @@ a.button-go-on::before {
 input#location-search {
 
 
+    touch-action: manipulation;
     flex: 1;
     border: none;
     border-radius: 0;
